tests/error/library_errors/generic_entrypoint.err
Error: Invalid entry point (at $FILE:7:0)
  | 
5 | 
6 | @guppy
7 | def func(x: T) -> array[T, 3]:
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |     return array(x for _ in range(3))
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Function `func` is not a valid compilation entry point since
  |                                       the value of its generic parameter `T` is not known

Guppy compilation failed due to 1 previous error
